--- a/.github/workflows/roon-update.yaml
+++ b/.github/workflows/roon-update.yaml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@main
-      - run: nix shell nixpkgs#gnused -c ./pkgs/roon-server/update.sh
+      - run: nix shell nixpkgs#gnused -c 'zsh ./pkgs/roon-server/update.sh >> "$GITHUB_OUTPUT"'
         id: update-sh
       - uses: peter-evans/create-pull-request@v7.0.5
         with:
