fix: roon-update.yaml

--- a/.github/workflows/roon-update.yaml
+++ b/.github/workflows/roon-update.yaml
@@ -7,12 +7,12 @@ permissions:
   contents: write
   pull-requests: write
 jobs:
-  nix-flake-update:
+  roon-update:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@main
-      - run: nix shell nixpkgs#zsh nixpkgs#gnused -c 'zsh ./pkgs/roon-server/update.sh >> "$GITHUB_OUTPUT"'
+      - run: nix shell nixpkgs#zsh nixpkgs#gnused -c zsh ./pkgs/roon-server/update.sh >> "$GITHUB_OUTPUT"
         id: update-sh
       - uses: peter-evans/create-pull-request@v7.0.5
         with:
