fix: only run roon-update daily

--- a/.github/workflows/roon-update.yaml
+++ b/.github/workflows/roon-update.yaml
@@ -2,7 +2,7 @@ name: roon update
 on:
   workflow_dispatch:
   schedule:
-    - cron: '* * * * 0' # runs daily at 00:00
+    - cron: '0 0 * * *' # runs daily at 00:00
 permissions:
   contents: write
   pull-requests: write
