feat: Link to roon release notes in roon-update pull requests

--- a/.github/workflows/roon-update.yaml
+++ b/.github/workflows/roon-update.yaml
@@ -20,4 +20,5 @@ jobs:
           commit-message: ${{ steps.update-sh.outputs.commit-msg }}
           title: "roon update"
           assignees: jmmaloney4
+          body: "[Roon Release Notes](https://community.roonlabs.com/c/roon/software-release-notes/)"
 
