ci(garnix): build on all platforms

--- a/garnix.yaml
+++ b/garnix.yaml
@@ -2,3 +2,7 @@ builds:
   exclude:
   - packages.*.epub2tts
   - packages.*.lean
+  include:
+  - *.aarch64-darwin.*
+  - *.aarch64-linux.*
+  - *.x86_64-linux.*
