ci(garnix): wrap globs in quotes in garnix.yaml

--- a/garnix.yaml
+++ b/garnix.yaml
@@ -3,6 +3,6 @@ builds:
   - packages.*.epub2tts
   - packages.*.lean
   include:
-  - *.aarch64-darwin.*
-  - *.aarch64-linux.*
-  - *.x86_64-linux.*
+  - '*.aarch64-darwin.*'
+  - '*.aarch64-linux.*'
+  - '*.x86_64-linux.*'
