--- a/tests/fixtures/checks/python-workspace/packages/pkg-a/pyproject.toml
+++ b/tests/fixtures/checks/python-workspace/packages/pkg-a/pyproject.toml
@@ -3,6 +3,6 @@ name = "pkg-a"
 version = "0.1.0"
 dependencies = []
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = ["pytest", "mypy"]
 test = ["pytest-cov"]
